--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:
 package:
   stage: package
   script:      
-    - "call C:\Builds\.nuget\\pack.bat %CI_PROJECT_DIR% %CI_PROJECT_DIR%"
+    - '"call C:\Builds\.nuget\pack.bat" "%CI_PROJECT_DIR%" "%CI_PROJECT_DIR%"'
   tags:
     - msbuild
   
