--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 build:
   stage: build
   variables:
-    VERSION: '$$CI_BUILD_ID.0'
+    VERSION: '$CI_BUILD_ID.0'
   script:
     - 'echo %CI_PROJECT_DIR%'
     - 'echo %CI_BUILD_ID%'
