--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build:
     - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\msbuild.exe" Civic.Core.%CI_PROJECT_NAME%.sln /m /tv:15.0 /p:DoEvents=false /p:Configuration="Nuget-46" /p:Platform="Any Cpu"'
     - 'call C:\Builds\.nuget\pack2.bat %CI_PROJECT_DIR% %CI_PROJECT_DIR%'
     - git tag %version%
-    - git push orgin --tags
+    - git push origin --tags
   tags:
     - msbuild
   
