--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build:
     VERSION: '$CI_PIPELINE_ID.0'
   script:
     - 'echo %CI_PROJECT_DIR%'
-    - '"C:\Builds\.nuget\ModulePackageManager.exe" -scgn:%CI_PROJECT_DIR% -scpn:%CI_PROJECT_NAME% -scp:%CI_PIPELINE_ID% -sccu:%CI_COMMIT_SHA% | "C:\Builds\.nuget\AssemblyVersionSetter.exe" -t -e %CI_PROJECT_DIR%\References'
+    - 'call C:\Builds\.nuget\set.bat %CI_PROJECT_DIR%  %CI_PROJECT_NAMESPACE% %CI_PROJECT_NAME% %CI_PIPELINE_ID% %CI_COMMIT_SHA%'
     - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\msbuild.exe" /t:restore %CI_PROJECT_NAMESPACE%.%CI_PROJECT_NAME%.sln /p:RestoreConfigFile=C:\Builds\.nuget\NuGet.Config /p:Configuration="Nuget-45"'
     - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\msbuild.exe" %CI_PROJECT_NAMESPACE%.%CI_PROJECT_NAME%.sln /m /tv:15.0 /p:DoEvents=false /p:Configuration="Nuget-45" /p:Platform="Any Cpu"'
     - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\msbuild.exe" /t:restore %CI_PROJECT_NAMESPACE%.%CI_PROJECT_NAME%.sln /p:RestoreConfigFile=C:\Builds\.nuget\NuGet.Config /p:Configuration="Nuget-46"'
