--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,6 @@ build:
     - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\msbuild.exe" /t:restore %CI_PROJECT_NAMESPACE%.%CI_PROJECT_NAME%.sln /p:RestoreConfigFile=C:\Builds\.nuget\NuGet.Config /p:Configuration="Nuget-47"'
     - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin\msbuild.exe" %CI_PROJECT_NAMESPACE%.%CI_PROJECT_NAME%.sln /m /tv:15.0 /p:DoEvents=false /p:Configuration="Nuget-47" /p:Platform="Any Cpu"'
     - 'call C:\Builds\.nuget\pack2.bat %CI_PROJECT_DIR% %CI_PROJECT_NAMESPACE% %CI_PROJECT_NAME% %CI_PIPELINE_ID% %CI_COMMIT_SHA%'
+    - 'call C:\Builds\.nuget\tag.bat %CI_COMMIT_REF_NAME%'
   tags:
     - msbuild
- 
