--- a/Core.Configuration/1stCondigo.Core.Configuration.csproj
+++ b/Core.Configuration/1stCondigo.Core.Configuration.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net471</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyName>1stCondigo.Core.Configuration</AssemblyName>
+    <RootNamespace>Core.Configuration</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
