--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        dotnet: [ '4.8', '5.0.0-preview.6' ]
+        dotnet: [ '4.8.*', '5.0.0-preview.6' ]
     name: Dotnet ${{ matrix.dotnet }}
     steps:
     - uses: actions/checkout@v2
