--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: windows-latest
     strategy:
       matrix:
@@ -24,5 +23,52 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
+  test:
+    runs-on: ubuntu-latest
+    needs: [build]
+    strategy:
+       matrix:
+        # Run the steps below with the following versions of Node.js
+        node-version: [8.x, 10.x, 12.x]
+    steps:
+      # Fetch the latest commit
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    # Setup Node.js using the appropriate version
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+       with:
+        node-version: ${{ matrix.node-version }}
+
+      # Install package dependencies
+      - name: Install
+       run: npm ci
+
+      # Run tests
+      - name: Test
+       run: npm test
+
+  release:
+    # Only release on push to master
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    # Waits for test jobs for each Node.js version to complete
+    needs: [test]
+    steps:
+      - name: Checkout
+      uses: actions/checkout@v2
+
+      - name: Setup Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+
+      - name: Install
+        run: npm ci
+
+      - name: Release
+        run: npx semantic-release
+        env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
