--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         node-version: 12.x
     - name: Check commit Messaga
-      run: git log -1 --no-merges --pretty=%B > commit.msg; cat commit.msg | npx commitlint -g commitlint.config.js; rm commit.msg
+      run: echo "${{github.event.head_commit.message}}" > commit.msg; cat commit.msg | npx commitlint -g commitlint.config.js; rm commit.msg
 
   build:
     runs-on: windows-latest
