--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -15,8 +15,8 @@ jobs:
       with:
         node-version: 12.x
     - name: Install Packages
-      run: npm ci
-    - name: Check commit message
+      run: cd ..; npm ci
+    - name: Check Commit Message
       run: echo "${{github.event.head_commit.message}}" > commit.msg; cat commit.msg | npx commitlint -g ..//commitlint.config.js; rm commit.msg
 
   build:
