--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.0",
   "description": "Caching",
   "dependencies": {
-    "@codigo/build-utils": "git+https://github.com/cdotyone/build-utils.git"
+    "@codigo/build-utils": "git+https://github.com/cdotyone/build-utils.git#bd1ca73d40d0a6edbf56b6c2d1df5c4005de5175"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
