--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,11 +20,11 @@ jobs:
       run: npm ci
     - name: Check Commit Message
       run: echo "${{github.event.head_commit.message}}" > commit.msg; cat commit.msg | npx commitlint -g commitlint.config.js; rm commit.msg
-    - name: 'Get Next Version'
+    - name: "Get Next Version"
       id: semver
       uses: cdotyone/github-next-version@master
       env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     - name: Set .Net Version
       uses: cdotyone/github-set-net-version@master
       with:
