--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -24,7 +24,7 @@ jobs:
       id: semver
       uses: cdotyone/github-next-version@master
       env:
-        GITHUB_TOKEN: WTW
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     - name: Set .Net Version
       uses: cdotyone/github-set-net-version@master
       with:
