fix: debug build

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,6 +23,8 @@ jobs:
       uses: cdotyone/github-next-version@master
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    - name: what
+      run: echo "${{ steps.semver.version }}"
     - name: Set .Net Version
       uses: cdotyone/github-set-net-version@master
       with:
