--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  commit:
+  build:
     runs-on: windows-latest
     steps:
     - name: Checkout
@@ -40,3 +40,6 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    - name: Tag
+      run: git tag -a v${{ steps.semver.outputs.version }} -m "[ci skip]"
+      
