--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+      with:
+        fetch-depth: 0
     - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
@@ -25,13 +27,14 @@ jobs:
         rm commit.msg
     - name: "Get Next Version"
       id: semver
-      uses: cdotyone/github-next-version@master
-      env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      uses: mathieudutour/github-tag-action@v4.5
+      with:
+        github_token: "${{ secrets.GITHUB_TOKEN }}"
+        dry_run: true
     - name: Set .Net Version
       uses: cdotyone/github-set-net-version@master
       with:
-        version: "${{ steps.semver.outputs.version }}"
+        version: "${{ steps.semver.outputs.new_version }}"
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -41,8 +44,6 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Tag
-      run: |
-        git tag -l v${{ steps.semver.outputs.version }}
-        git push origin --tags
-      env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      uses: mathieudutour/github-tag-action@v4.5
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
