--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
       with:
         fetch-depth: 0
     - name: Use Node.js 12.x
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2-beta
       with:
         node-version: 12.x
     - name: Install Packages
@@ -29,13 +29,12 @@ jobs:
       id: semver
       uses: mathieudutour/github-tag-action@v4.5
       with:
-        github_token: "${{ secrets.GITHUB_TOKEN }}"
+        github_token: "${{ github.token }}"
         dry_run: true
     - name: Set .Net Version
       uses: cdotyone/github-set-net-version@master
       with:
         version: "${{ steps.semver.outputs.new_version }}"
-      run: npm install
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -46,7 +45,6 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Conventional Changelog
       uses: vemel/update-changelog@0.0.1
-      run: npm install
       with:
         version: ${{ steps.semver.outputs.new_version }}
     - name: Tag
