--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -2,9 +2,9 @@ name: .NET Core
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -32,7 +32,7 @@ jobs:
         github_token: "${{ github.token }}"
         dry_run: true
     - name: Set .Net Version
-      uses: cdotyone/github-set-net-version@master
+      uses: cdotyone/github-set-net-version@main
       with:
         version: "${{ steps.semver.outputs.new_version }}"
     - name: Setup .NET Core
