--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -44,7 +44,9 @@ jobs:
     - name: Build .NET
       run: dotnet pack --configuration Release --no-restore -p:PackageVersion=${{ steps.semver.outputs.new_version }} --output dist 
     - name: Conventional Changelog
-      uses: cdotyone/update-changelog@master
+    - name: Create changelogs
+        id: changelogs
+      uses: heineiuo/create-changelogs@master
       with:
         version: ${{ steps.semver.outputs.new_version }}
     - name: Tag
