--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -46,9 +46,18 @@ jobs:
     - name: Conventional Changelog
       id: changelogs
       uses: heineiuo/create-changelogs@master
-      with:
-        version: ${{ steps.semver.outputs.new_version }}
     - name: Tag
       uses: mathieudutour/github-tag-action@v4.5
       with:
         github_token: ${{ github.token }}
+    - name: Create Release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: ${{ steps.changelogs.outputs.changelogs }}
+          draft: false
+          prerelease: ${{ steps.changelogs.outputs.release_type == 'prerelease' }}
