--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -51,13 +51,13 @@ jobs:
       with:
         github_token: ${{ github.token }}
     - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
+      id: create_release
+      uses: actions/create-release@latest
+      with:
           tag_name: ${{ github.ref }}
           release_name: ${{ github.ref }}
           body: ${{ steps.changelogs.outputs.changelogs }}
           draft: false
           prerelease: ${{ steps.changelogs.outputs.release_type == 'prerelease' }}
+      env:
+          GITHUB_TOKEN: ${{ github.token }}
