--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -46,6 +46,6 @@ jobs:
     - name: Conventional Changelog Action
       uses: TriPSs/conventional-changelog-action@v3
       with:
-        github-token: ${{ secrets.token }}
+        github-token: ${{ github.token }}
         tag-prefix: 'v'
         release-count: '20'
