--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: 12.x
     - name: Install Packages
-      uses: uses: ktmud/cached-dependencies@master
+      uses: ktmud/cached-dependencies@master
       with:
         run: |
             cache-restore npm
