--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -53,6 +53,6 @@ jobs:
         git config --global user.name 'Chris Doty'
         git config --global user.email 'cdotyone@users.noreply.github.com'
         git commit -am "chore: commit v${{ steps.semver.outputs.new_version }} [ci skip]"
-        git push --tags
+        git push origin:main --tags
       env:
         GITHUB_TOKEN: "${{ github.token }}"
