--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -54,5 +54,6 @@ jobs:
         git config --global user.email 'cdotyone@users.noreply.github.com'
         git commit -am "chore: commit v${{ steps.semver.outputs.new_version }} [ci skip]"
         git push origin:main --tags
+        echo "DONE"
       env:
         GITHUB_TOKEN: "${{ github.token }}"
