--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -48,12 +48,8 @@ jobs:
         github-token: ${{ github.token }}
         tag-prefix: 'v'
         release-count: '20'
-    - name: Push Changes
-      run: |
-        git config --global user.name 'Chris Doty'
-        git config --global user.email 'cdotyone@users.noreply.github.com'
-        git commit -am "chore: commit v${{ steps.semver.outputs.new_version }} [ci skip]"
-        git push origin:main --tags
-        echo "DONE"
+      uses: cdotyone/github-push@main
+      with:
+        version: "${{ steps.semver.outputs.new_version }}"
       env:
         GITHUB_TOKEN: "${{ github.token }}"
