--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -32,6 +32,7 @@ jobs:
         dry_run: true
     - name: Set .Net Version
       uses: cdotyone/github-set-net-version@main
+      id: cleaned
       with:
         version: "${{ steps.semver.outputs.new_version }}"
     - name: Setup .NET Core
@@ -41,7 +42,7 @@ jobs:
     - name: Install Nuget Dependencies
       run: dotnet restore
     - name: Build .NET
-      run: dotnet pack --configuration Release --no-restore -p:PackageVersion=${{ steps.semver.outputs.new_version }} --output dist 
+      run: dotnet pack --configuration Release --no-restore -p:PackageVersion=${{ steps.cleaned.outputs.version }} --output dist 
     - name: Conventional Changelog Action
       uses: TriPSs/conventional-changelog-action@v3
       with:
