--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -42,6 +42,8 @@ jobs:
       run: dotnet restore
     - name: Build .NET
       run: dotnet pack --configuration Release --no-restore -p:PackageVersion=${{ steps.cleaned.outputs.version }} --output dist 
+    - name: Publish Nuget Package
+      run: dotnet nuget push dist/*.nupkg -k ${{ secrets.NUGET_KEY }}
     - name: Conventional Changelog Action
       uses: TriPSs/conventional-changelog-action@v3
       with:
