--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Build .NET
       run: dotnet pack --configuration Release --no-restore -p:PackageVersion=${{ steps.cleaned.outputs.version }} --output dist 
     - name: Publish Nuget Package
-      run: dotnet nuget push -s dist -k ${{ secrets.NUGET_KEY }}
+      run: dotnet nuget push -s dist/*.nupkg -k ${{ secrets.NUGET_KEY }}
     - name: Conventional Changelog Action
       uses: TriPSs/conventional-changelog-action@v3
       with:
