--- a/Core.Configuration/Codigo.Core.Configuration.csproj
+++ b/Core.Configuration/Codigo.Core.Configuration.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netstandard2.0;net48</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netstandard2.0;net48;net5.0;net6.0</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyName>Codigo.Core.Configuration</AssemblyName>
     <RootNamespace>Core.Configuration</RootNamespace>
@@ -13,6 +13,14 @@
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1'">
     <DefineConstants>NETCORE;</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net5.0'">
+	 <DefineConstants>NETCORE;</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net6.0'">
+	 <DefineConstants>NETCORE;</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net48' ">
@@ -29,7 +37,7 @@
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net48'">
-    <DefineConstants>NET471;NETFULL</DefineConstants>
+    <DefineConstants>NET48;NETFULL</DefineConstants>
   </PropertyGroup>
 
 
