--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -25,15 +25,20 @@ jobs:
         rm commit.msg
     - name: "Get Next Version"
       id: semver
-      uses: mathieudutour/github-tag-action@v4.5
+      uses: cdotyone/conventional-changelog-action@master
       with:
-        github_token: "${{ github.token }}"
-        dry_run: true
+        github-token: ${{ github.token }}
+        tag-prefix: 'v'
+        release-count: '20'
+        skip-commit: 'true'
+        skip-push: 'true'
+        skip-tag: 'true'
+        output-file: 'false'
     - name: Set .Net Version
       uses: cdotyone/github-set-net-version@main
       id: cleaned
       with:
-        version: "${{ steps.semver.outputs.new_version }}"
+        version: "${{ steps.semver.outputs.version }}"
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -48,7 +53,7 @@ jobs:
     - name: Publish Nuget Package
       run: dotnet nuget push dist\*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_KEY }}
     - name: Conventional Changelog Action
-      uses: TriPSs/conventional-changelog-action@v3
+      uses: cdotyone/conventional-changelog-action@master
       with:
         github-token: ${{ github.token }}
         tag-prefix: 'v'
